# naive-pipeline-execution

./: Cargo.toml  README.md
src/: graph.rs  lib.rs  main.rs  pipeline.rs  processor.rs  source.rs  transform.rs
src/source/: memory_source.rs
src/transform/: accumulate.rs  arithmetic.rs  merge.rs  mod.rs
