[package]
name = "pipeline-execution-toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
arrow = { version = "34.0.0", features = ["prettyprint"] }
async-trait = "0.1.66"
petgraph-graphml = "3.0.0"
petgraph = "0.6.3"
pretty_assertions = "1.3.0"
tokio = { version = "1.26.0", features = ["full"] }
